# Dioxus_Tutorial

./: .gitignore
first_component/: Cargo.toml
first_component/src/: main.rs
highfive/: Cargo.toml
tailwind/: Cargo.toml  Dioxus.toml
tailwind/src/: main.rs
